# aind-fip-harp-raw-qc

./: README.md
.codeocean/: datasets.json
code/: qc_exporter.py  run_capsule.py
environment/: Dockerfile  pyproject.toml
